--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -3,6 +3,8 @@
 <html lang="en">
   {% include "partials/header.html" %}
   <body>
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v5.0&appId=142235863220717&autoLogAppEvents=1"></script>
     {% include "partials/menu.html" %}
     <!-- <div class="slider">
     </div> -->
@@ -39,11 +41,12 @@
                             </div>
                         </div>
                         <div class="col-md-12 mb-3">
-                            <p class="text-center">
+                            <!-- <p class="text-center">
                                 <a href="javascript:void();" class="google btn mybtn"><i class="fa fa-facebook">
                                  </i> Signup using Facebook
                                  </a>
-                            </p>
+                            </p> -->
+                            <div class="fb-login-button" data-width="" data-size="large" data-button-type="login_with" data-auto-logout-link="false" data-use-continue-as="true"></div>
                         </div>
                         <div class="form-group">
                             <p class="text-center">Don't have account? <a href="#" id="signup">Sign up here</a></p>
