Update login and register page

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -54,6 +54,7 @@
                     </form>
 
                 </div>
+                <div style='margin-bottom:20px;'></div>
             </div>
             <div id="second">
                 <div class="myform form ">
@@ -97,6 +98,7 @@
                         </div>
                     </form>
                 </div>
+                <div style='margin-bottom:20px;'></div>
             </div>
             <div id="third">
                 <div class="myform form ">
