--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -8,7 +8,7 @@
     <link href="{% static 'css/footer.css' %}" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+    <link rel="icon" type="image/png" href="media/favicon.png">
     <link href="{% static 'css/override.css' %}" rel="stylesheet">
     
   </head>
