--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -22,7 +22,7 @@
                     <form name="login" id="loginForm">
                         <div class="form-group">
                             <label for="username">Username</label>
-                            <input type="text" name="username" class="form-control" id="login_username" aria-describedby="emailHelp" placeholder="Enter email">
+                            <input type="text" name="username" class="form-control" id="login_username" aria-describedby="emailHelp" placeholder="Username">
                         </div>
                         <div class="form-group">
                             <label for="password">Password</label>
@@ -54,7 +54,7 @@
                     </form>
 
                 </div>
-                <div style='padding-bottom:80px;'></div>
+                <div class="spacebottomform"></div>
             </div>
             <div id="second">
                 <div class="myform form ">
@@ -98,7 +98,7 @@
                         </div>
                     </form>
                 </div>
-                <div style='padding-bottom:80px;'></div>
+                <div class="spacebottomform"></div>
             </div>
             <div id="third">
                 <div class="myform form ">
