--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,10 @@
     </div> -->
     <div class="container">
       <div class="row">
-      <p>Home page</p>
+        <div class="col-12">
+          <p class="text-center">Home page</p><br/>
+          <p class="text-center">{{user.username}}</p>
+        </div>
       </div>
     </div>
     {% include 'partials/footer.html' %}
