--- a/templates/partials/menu.html
+++ b/templates/partials/menu.html
@@ -27,9 +27,9 @@
             <li class="nav-item">
                   <a class="nav-link" href="#">Link</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+            <li class="nav-item" id="accounts">            
             </li>
+
           </ul>
         </div>
       
@@ -51,8 +51,7 @@
               <li class="nav-item">
                     <a class="nav-link" href="#">Mobile Link</a>
               </li>
-              <li class="nav-item">
-                  <a class="nav-link" href="#">Mobile Link</a>
+              <li class="nav-item" id="mobileAccounts">
               </li>
             </ul>
         </div>
