--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -46,7 +46,7 @@
                                  </i> Signup using Facebook
                                  </a>
                             </p> -->
-                            <div class="fb-login-button" data-width="" data-size="large" data-button-type="login_with" data-auto-logout-link="false" data-use-continue-as="true"></div>
+                            <div class="fb-login-button text-center" data-width="" data-size="large" data-button-type="login_with" data-auto-logout-link="false" data-use-continue-as="true"></div>
                         </div>
                         <div class="form-group">
                             <p class="text-center">Don't have account? <a href="#" id="signup">Sign up here</a></p>
